--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
             <form class="form-box">
                 <div class=name-input>
                     <p>お名前をどうぞ</p>
-                    <input id="name"　size="15" maxlength="20" placeholder="名前を入力してね">
+                    <input id="name" name= "question1" maxlength="20" placeholder="名前を入力してね">
                 </div>
                 <div class=selecter>
                     <p>どっちがすきですか？</p>
                     <select id="choice" tabindex="1">
-                            <option value="dog">いぬ</option>
-                            <option value="cat">ねこ</option>
+                            <option value="いぬ">いぬ</option>
+                            <option value="ねこ">ねこ</option>
                     </select>
                     
                 </div>
