--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <!--fontAwsom-->
     <script src="https://kit.fontawesome.com/ac78c75a7e.js"></script>    
     <!--CSS-->
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
-
+    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="responsive.css">
 </head>
 <body>
     <!--モーダル-->
